Kjør ktlint med nyeste versjon (#30)
* Kjør ktlint med nyeste versjon

* Kjør ktlint med nyeste versjon